# yoinked

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: retention.yml  rules.yml
tests/: conftest.py  test_logger.py  test_mover.py  test_retention_engine.py  test_state.py  test_watcher.py
yoinked/: main.py
yoinked/core/: engine.py  logger.py  mover.py  retention_engine.py  state.py  watcher.py
yoinked/models/: file_event.py
yoinked/rules/: router.py
yoinked/utils/: config_loader.py
