[project]
name = "yoinked"
version = "0.0.0"
description = "Local filesystem automation for your Downloads folder"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [ { name = "voophdev" } ]
dependencies = []

[tool.setuptools.metadata]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]
